fix overflow.

--- a/src/components/main/introducing/introducing.css
+++ b/src/components/main/introducing/introducing.css
@@ -5,7 +5,6 @@
     justify-content: center;
 
     width: 100%;
-    overflow-x: hidden;
 }
 
 .intro__topbar {
